Added hotspots ot DOM

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -88,3 +88,12 @@ body {
         border-bottom: 0;
     }
 }
+
+.hotspots {
+    position: absolute;
+}
+
+.hotspot {
+    background: #ff00ff;
+    position: absolute;
+}
