--- a/app/scripts/templates/Hotspot.ejs
+++ b/app/scripts/templates/Hotspot.ejs
@@ -1,3 +1,3 @@
 <div class="hotspot" id="<%= id %>">
-	<a href="<%= url %>" target="_blank">*</a>
+	<a href="<%= url %>" target="_blank">[ * ]</a>
 </div>
