--- a/app/scripts/templates/Hotspot.ejs
+++ b/app/scripts/templates/Hotspot.ejs
@@ -1,3 +1,1 @@
-<div class="hotspot" id="<%= id %>">
-	<a href="<%= url %>" target="_blank">[*]</a>
-</div>
+<a href="<%= url %>" target="_blank"><div class="hotspot" id="<%= id %>"></div></a>
