Added hot pink background to hotspots

--- a/app/scripts/templates/Hotspot.ejs
+++ b/app/scripts/templates/Hotspot.ejs
@@ -1,1 +1,1 @@
-<a href="<%= url %>" target="_blank"><div class="hotspot" id="<%= id %>"></div></a>
+<a href="<%= url %>" target="_blank"><div class="hotspot" id="<%= id %>">[*]</div></a>
