--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -95,6 +95,7 @@ body {
 
 .hotspot {
     position: absolute;
+    background: #ff00ff;
     background-image: url('hotspot-button.png');
     width: 32px;
     height: 32px;
