Moved hotspot button to images directory

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -95,8 +95,7 @@ body {
 
 .hotspot {
     position: absolute;
-    background: #ff00ff;
-    background-image: url('hotspot-button.png');
+    background-image: url('../images/hotspot-button.png');
     width: 32px;
     height: 32px;
 }
