Cleaned up carousel code

--- a/app/scripts/templates/BikeApplicationLayout.ejs
+++ b/app/scripts/templates/BikeApplicationLayout.ejs
@@ -1,2 +1,2 @@
-<div id='carousel-holder'>carousel</div>
-<div id='hotspots-holder'></div>
+<div id='carousel-container'></div>
+<div id='hotspots-container'></div>
