--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,12 @@
-$icon-font-path: "../bower_components/sass-bootstrap/fonts/";
+$icon-font-path: '../bower_components/sass-bootstrap/fonts/';
 
 @import 'sass-bootstrap/lib/bootstrap';
+
+html, body {
+    height:100%;
+    margin:0;
+    padding:0;
+}
 
 .browsehappy {
     margin: 0.2em 0;
@@ -9,92 +15,39 @@ $icon-font-path: "../bower_components/sass-bootstrap/fonts/";
     padding: 0.2em 0;
 }
 
-/* Space out content a bit */
-body {
-    padding: 0px;
+#main-container {
+    height: 100%;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-    padding-left: 15px;
-    padding-right: 15px;
+#hotspots-carousel-container {
+    height: 100%;
 }
 
-/* Custom page header */
-.header {
-    border-bottom: 1px solid #e5e5e5;
+#carousel-container {
+    height: 100%;
 }
 
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
+#thumbnails-container {
+    margin-top: 40px;
 }
 
-/* Custom page footer */
-.footer {
-    padding-top: 19px;
-    color: #777;
-    border-top: 1px solid #e5e5e5;
+.carousel, .item {
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
-.container-narrow > hr {
-    margin: 30px 0;
+.carousel-inner {
+    height: 100%;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-    text-align: center;
-    border-bottom: 1px solid #e5e5e5;
-}
-
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-    margin: 40px 0;
-}
-
-.marketing p + h4 {
-    margin-top: 28px;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-    .container {
-        max-width: 730px;
-    }
-
-    /* Remove the padding we set earlier */
-    .header,
-    .marketing,
-    .footer {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    /* Space out the masthead */
-    .header {
-        margin-bottom: 30px;
-    }
-    /* Remove the bottom border on the jumbotron for visual effect */
-    .jumbotron {
-        border-bottom: 0;
-    }
-}
-
-.hotspots-holder {
+.hotspots-container {
     position: absolute;
     top: 0px;
 }
 
-.hotspot-holder {
+.hotspot-container {
     position: absolute;
 }
 
@@ -102,8 +55,4 @@ body {
     background-image: url('../images/hotspot-button.png');
     width: 32px;
     height: 32px;
-}
-
-.popovers {
-    position: absolute;
 }
