--- a/app/scripts/templates/ThumbnailItem.ejs
+++ b/app/scripts/templates/ThumbnailItem.ejs
@@ -1,5 +1,4 @@
-<div class="col-lg-3 col-sm-4 col-xs-6">
-    <a href="#" class="thumbnail">
-		<img src="<%= image %>" class="img-responsive">
-    </a>
-</div>
+<a href="#" class="thumbnail">
+	<img src="<%= image %>" class="img-responsive">
+</a>
+<p class="title"><%= title %></p>
