Added filter button group

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,8 +27,12 @@ html, body {
     height: 100%;
 }
 
+#filters-container {
+    margin-top: 20px;
+}
+
 #thumbnails-container {
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .carousel, .item {
