--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -68,3 +68,50 @@ html, body {
 .tags {
     display: none;
 }
+
+.thumbnail-container {
+    padding: 0px;
+}
+
+.thumbnail {
+    margin: 0px;
+}
+
+.img-thumbnail {
+    padding: 0px;
+}
+
+/* CUSTOMIZE THE NAVBAR
+-------------------------------------------------- */
+
+/* Special class on .container surrounding .navbar, used for positioning it into place. */
+.navbar-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 20;
+}
+
+/* Flip around the padding for proper display in narrow viewports */
+.navbar-wrapper .container {
+  padding-right: 0;
+  padding-left: 0;
+}
+.navbar-wrapper .navbar {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+.navbar-wrapper .navbar {
+    padding-right: 0;
+    padding-left:  0;
+}
+
+/* The navbar becomes detached from the top, so we round the corners */
+    .navbar-wrapper .navbar {
+    border-radius: 4px;
+}
