--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,82 +3,104 @@ $icon-font-path: '../bower_components/sass-bootstrap/fonts/';
 @import 'sass-bootstrap/lib/bootstrap';
 
 html, body {
-    height:100%;
-    margin:0;
-    padding:0;
+  height:100%;
+  margin:0;
+  padding:0;
 }
 
 .browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
 }
 
 #main-container {
-    height: 100%;
+  height: 100%;
 }
 
 #hotspots-carousel-container {
-    height: 100%;
+  height: 100%;
 }
 
 #carousel-container {
-    height: 100%;
+  height: 100%;
 }
 
 #filters-container {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 #thumbnails-container {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .carousel, .item {
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
 
 .carousel-inner {
-    height: 100%;
+  height: 100%;
 }
 
+/* HOTSPOTS
+-------------------------------------------------- */
+
 .hotspots-container {
-    position: absolute;
-    top: 0px;
+  position: absolute;
+  top: 0px;
 }
 
 .hotspot-container {
-    position: absolute;
+  position: absolute;
 }
 
 .hotspot-button {
-    background-image: url('../images/hotspot-button.png');
-    width: 32px;
-    height: 32px;
+  background-image: url('../images/hotspot-button.png');
+  width: 32px;
+  height: 32px;
 }
 
+/* POPOVERS
+-------------------------------------------------- */
+
+.popover-image-container {
+  width: 150px;
+  height: 150px;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.popover-image {
+  max-width: 150px;
+  max-height: 150px;
+}
+
+/* THUMBNAILS
+-------------------------------------------------- */
+
 .title {
-    display: none;
+  display: none;
 }
 
 .tags {
-    display: none;
+  display: none;
 }
 
 .thumbnail-container {
-    padding: 0px;
+  padding: 0px;
 }
 
 .thumbnail {
-    margin: 0px;
+  margin: 0px;
 }
 
 .img-thumbnail {
-    padding: 0px;
+  padding: 0px;
 }
 
 /* CUSTOMIZE THE NAVBAR
