Minor layout updates to thumbnail grid

--- a/app/scripts/templates/FilterButtonListItem.ejs
+++ b/app/scripts/templates/FilterButtonListItem.ejs
@@ -1,5 +1,5 @@
 <a href='#'>
-	<% if (label == 'Clear') { %>
+	<% if (value == '*') { %>
 	    <span class='glyphicon glyphicon-ban-circle'></span>
 	<% } %>
 	<%= label %>
