--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,7 +33,7 @@ html, body {
 
 #thumbnails-container {
   margin-top: 20px;
-  margin-bottom: 100px;
+  min-height: 800px;
 }
 
 .carousel, .item {
