--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,9 +3,9 @@ $icon-font-path: '../bower_components/sass-bootstrap/fonts/';
 @import 'sass-bootstrap/lib/bootstrap';
 
 html, body {
-  height:100%;
-  margin:0;
-  padding:0;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .browsehappy {
@@ -107,7 +107,7 @@ html, body {
 
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
 .navbar-wrapper {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   left: 0;
@@ -130,9 +130,4 @@ html, body {
 .navbar-wrapper .navbar {
     padding-right: 0;
     padding-left:  0;
-}
-
-/* The navbar becomes detached from the top, so we round the corners */
-    .navbar-wrapper .navbar {
-    border-radius: 4px;
 }
