--- a/app/scripts/templates/ThumbnailItem.ejs
+++ b/app/scripts/templates/ThumbnailItem.ejs
@@ -1,5 +1,5 @@
 <a href="#" class="thumbnail">
-	<img src="<%= image %>" class="img-responsive">
+	<img class="img-responsive" src="<%= image %>" />
 </a>
 <p class="title"><%= title %></p>
 <p class="tags"><%= tags %></p>
