Opening part links in new window

--- a/app/scripts/templates/Part.ejs
+++ b/app/scripts/templates/Part.ejs
@@ -1,6 +1,6 @@
 <td>
-	<a href="<%= url %>"><div class="popover-image-container"><img class="popover-image" src="<%= image %>" /></a>
+	<a href="<%= url %>" target="_blank"><div class="popover-image-container"><img class="popover-image" src="<%= image %>" /></a>
 </td>
 <td>
-	<a href="<%= url %>"><h5><%= title %></h5></a>
+	<a href="<%= url %>" target="_blank"><h5><%= title %></h5></a>
 </td>
