Added shadows to nav, carousel and thumbnails

--- a/app/scripts/templates/ThumbnailItem.ejs
+++ b/app/scripts/templates/ThumbnailItem.ejs
@@ -1,4 +1,4 @@
-<a href="#" class="thumbnail">
+<a href="#">
 	<img class="img-responsive" src="<%= image %>" />
 </a>
 <p class="title"><%= title %></p>
