--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,10 @@ html, body {
 
 #main-container {
   height: 100%;
+
+  box-shadow: 0 2px 15px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0 2px 15px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 2px 15px rgba(0,0,0,0.5);
 }
 
 #hotspots-carousel-container {
@@ -36,6 +40,17 @@ html, body {
   min-height: 800px;
 }
 
+/* PARTS MODAL
+-------------------------------------------------- */
+
+.modal-body {
+  max-height: 800px;
+  overflow: scroll;
+}
+
+/* CAROUSEL
+-------------------------------------------------- */
+
 .carousel, .item {
   height: 100%;
   background-repeat: no-repeat;
@@ -45,6 +60,10 @@ html, body {
 
 .carousel-inner {
   height: 100%;
+}
+
+.carousel-caption {
+  padding-bottom: 0;
 }
 
 /* HOTSPOTS
@@ -94,40 +113,23 @@ html, body {
   padding: 0px;
 }
 
-.thumbnail {
-  margin: 0px;
+.img-responsive:hover {
+  box-shadow: 0 2px 15px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0 2px 15px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 2px 15px rgba(0,0,0,0.5);
 }
 
-.img-thumbnail {
-  padding: 0px;
-}
-
-/* CUSTOMIZE THE NAVBAR
+/* NAVBAR
 -------------------------------------------------- */
 
-/* Special class on .container surrounding .navbar, used for positioning it into place. */
-.navbar-wrapper {
+.navbar {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   z-index: 20;
-}
 
-/* Flip around the padding for proper display in narrow viewports */
-.navbar-wrapper .container {
-  padding-right: 0;
-  padding-left: 0;
-}
-.navbar-wrapper .navbar {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-/* RESPONSIVE CSS
--------------------------------------------------- */
-
-.navbar-wrapper .navbar {
-    padding-right: 0;
-    padding-left:  0;
+  box-shadow: 0 2px 15px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0 2px 15px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 2px 15px rgba(0,0,0,0.5);
 }
