Pausing carousel when modal is visible

--- a/app/scripts/templates/CarouselItem.ejs
+++ b/app/scripts/templates/CarouselItem.ejs
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="carousel-caption">
         <h1><%= title %></h1>
-        <button type="button" class="btn btn-default btn-xs" id="parts-button">Component Grouping</button>
+        <button type="button" class="btn btn-default btn-xs" id="parts-button">Equipment Grouping</button>
         <button type="button" class="btn btn-default btn-xs" id="hotspots-button">Toggle Hotspots</button>
     </div>
 </div>
