--- a/app/scripts/templates/ThumbnailsComposite.ejs
+++ b/app/scripts/templates/ThumbnailsComposite.ejs
@@ -1,3 +1,6 @@
 <div id="thumbnails-container" class="container">
+	<div id="no-results-container" class="alert alert-warning" role="alert">
+		There are no matching bikes for that combination of filters. <a id="show-all-button" class="alert-link" href='#'>Show all bikes.</a>
+	</div>
     <div id="thumbnails-row-container" class="row"></div>
 </div>
