--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -41,6 +41,10 @@ html, body {
   min-height: 800px;
 }
 
+#no-results-container {
+  display: none;
+}
+
 /* PARTS MODAL
 -------------------------------------------------- */
 
