--- a/app/scripts/templates/PartsModalComposite.ejs
+++ b/app/scripts/templates/PartsModalComposite.ejs
@@ -1,12 +1,12 @@
 <div class="modal fade" id="parts-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <h4 class="modal-title" id="myModalLabel">Equipment Grouping</h4>
       </div>
       <div class="modal-body">
-      	<table class="table" id="parts-container"></table>
+      	<div id="parts-container"></div>
       </div>
     </div>
   </div>
