--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -43,7 +43,10 @@ html, body {
 
 .modal-dialog {
   @media (min-width: 768px) {
-    width: 90%;
+    width: 100%;
+    max-width: 1200px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
 }
 
