--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,9 +25,9 @@ html, body {
     max-height: 600px;
   }
 
-  box-shadow: 0 2px 15px rgba(0,0,0,0.5);
-  -moz-box-shadow: 0 2px 15px rgba(0,0,0,0.5);
-  -webkit-box-shadow: 0 2px 15px rgba(0,0,0,0.5);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.5);
 }
 
 #hotspots-carousel-container {
@@ -70,9 +70,9 @@ html, body {
 }
 
 .part-container:hover {
-  box-shadow: 0 2px 20px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0 2px 20px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 0 2px 20px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  -moz-box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 
   z-index: 100;
 }
@@ -91,6 +91,13 @@ html, body {
   padding-top: 20px;
   margin-left: 50px;
   margin-right: 50px;
+}
+
+/* BIKE DETAIL MODAL
+-------------------------------------------------- */
+
+.bike-image {
+  width: 100%;
 }
 
 /* CAROUSEL
