--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -60,6 +60,7 @@ html, body {
   @media (min-width: 1200px) {
     max-height: 800px;
   }
+  padding: 0;
   overflow: scroll;
 }
 
@@ -98,6 +99,10 @@ html, body {
 
 .bike-image {
   width: 100%;
+
+  box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 2px 10px rgba(0,0,0,0.5);
 }
 
 .part-container-sm {
