--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -68,6 +68,8 @@ html, body {
   height: 350px;
   padding: 20px 0 0 0;
   text-align: center;
+  border-right: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .part-container:hover {
