Allowing modal to overflow vertically

--- a/app/scripts/templates/BikeDetailLayout.ejs
+++ b/app/scripts/templates/BikeDetailLayout.ejs
@@ -9,6 +9,7 @@
         <div id="bike-container"></div>
         <div id="parts-container"></div>
       </div>
+      <div class="modal-footer"></div>
     </div>
   </div>
 </div>
