--- a/app/scripts/templates/PartsModalComposite.ejs
+++ b/app/scripts/templates/PartsModalComposite.ejs
@@ -8,6 +8,7 @@
       <div class="modal-body">
       	<div id="parts-container"></div>
       </div>
+      <div class="modal-footer"></div>
     </div>
   </div>
 </div>
