--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -41,27 +41,29 @@ html, body {
 /* PARTS MODAL
 -------------------------------------------------- */
 
+.modal {
+  @media (min-width: 768px) {
+    padding-bottom: 25px;
+  }
+}
+
 .modal-dialog {
   @media (min-width: 768px) {
     width: 100%;
+    height: 100%;
     max-width: 1200px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding: 25px;
   }
 }
 
 .modal-body {
-  @media (max-width: 768px) {
-    max-height: 400px;
-  }
-  @media (min-width: 768px) and (max-width: 1200px) {
-    max-height: 600px;
-  }
-  @media (min-width: 1200px) {
-    max-height: 800px;
-  }
   padding: 0;
-  overflow: scroll;
+}
+
+.modal-footer {
+  margin: 0;
+  padding: 5px;
+  border: none;
 }
 
 .part-container {
