Added Delete button to product edit view

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,6 +9,20 @@ html, body {
   background: #eee;
 }
 
+body,
+input,
+button,
+select,
+textarea,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
