--- a/app/scripts/templates/PartListItem.ejs
+++ b/app/scripts/templates/PartListItem.ejs
@@ -13,5 +13,6 @@
 	  <div class="form-group">
 	    <input type="text" class="form-control input-sm" id="input-title" placeholder="<%= title %>" value="<%= title %>">
 	  </div>
-	  <button type="button" class="btn btn-default btn-xs" id="part-edit-save-button"><span class='glyphicon glyphicon glyphicon-cloud-upload'></span> Save</button>
+	  <button type="button" class="btn btn-primary btn-xs" id="part-edit-save-button"><span class='glyphicon glyphicon glyphicon-cloud-upload'></span> Save</button>
+	  <button type="button" class="btn btn-danger btn-xs" id="part-edit-delete-button"><span class='glyphicon glyphicon glyphicon-trash'></span> Delete</button>
 	</form>
