Created global part collection

--- a/app/scripts/templates/PartItem.ejs
+++ b/app/scripts/templates/PartItem.ejs
@@ -1,4 +1,18 @@
-<a href="<%= url %>" target="_blank">
-	<div class="part-image-container"><img class="part-image" src="<%= image %>" /></div>
-	<h5 class="part-title"><%= title %></h5>
-</a>
+	<a href="<%= url %>" target="_blank">
+		<div class="part-image-container-sm"><img class="part-image-sm" src="<%= image %>" /></div>
+	</a>
+	<a href="<%= url %>" target="_blank">
+		<h5 class="part-title" id="part-title"><%= title %></h5>
+	</a>
+	<button type="button" class="btn btn-default btn-xs part-edit-button" id="part-edit-button"><span class='glyphicon glyphicon glyphicon-pencil'></span> Edit</button>
+	<button type="button" class="btn btn-default btn-xs part-edit-button" id="part-edit-cancel-button"><span class='glyphicon glyphicon glyphicon-remove'></span> Cancel</button>
+	<form role="form" class="part-edit-form" id="part-edit-form">
+	  <div class="form-group">
+	    <input type="text" class="form-control input-sm" id="input-image" placeholder="<%= image %>" value="<%= image %>">
+	  </div>
+	  <div class="form-group">
+	    <input type="text" class="form-control input-sm" id="input-title" placeholder="<%= title %>" value="<%= title %>">
+	  </div>
+	  <button type="button" class="btn btn-primary btn-xs" id="part-edit-save-button"><span class='glyphicon glyphicon glyphicon-cloud-upload'></span> Save</button>
+	  <button type="button" class="btn btn-danger btn-xs" id="part-edit-delete-button"><span class='glyphicon glyphicon glyphicon-trash'></span> Delete</button>
+	</form>
