Added editingting of bike title and image

--- a/app/scripts/templates/BikeDetailLayout.ejs
+++ b/app/scripts/templates/BikeDetailLayout.ejs
@@ -6,6 +6,7 @@
         <div id="header-container"></div>
       </div>
       <div class="modal-body">
+        <div id="detail-hotspots-container"></div>
         <div id="bike-container"></div>
         <div id="parts-container"></div>
       </div>
