Created nav classes

--- a/app/scripts/templates/PartItem.ejs
+++ b/app/scripts/templates/PartItem.ejs
@@ -13,6 +13,6 @@
   <div class="form-group">
     <input type="text" class="form-control input-sm" id="input-title" placeholder="<%= title %>" value="<%= title %>">
   </div>
-  <button type="button" class="btn btn-primary btn-xs" id="edit-save-button"><span class='glyphicon glyphicon glyphicon-cloud-upload'></span> Save</button>
-  <button type="button" class="btn btn-danger btn-xs" id="edit-delete-button"><span class='glyphicon glyphicon glyphicon-trash'></span> Delete</button>
+  <button type="button" class="btn btn-primary btn-xs" id="part-edit-save-button"><span class='glyphicon glyphicon glyphicon-cloud-upload'></span> Save</button>
+  <button type="button" class="btn btn-danger btn-xs" id="part-edit-delete-button"><span class='glyphicon glyphicon glyphicon-ban-circle'></span> Remove</button>
 </form>
