Added parts filter buttons

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -304,6 +304,13 @@ h6 {
   z-index: 100;
 }
 
+/* PARTS LAYOUT
+-------------------------------------------------- */
+
+#parts-list-container {
+  margin-top: 20px;
+}
+
 /* NAVBAR
 -------------------------------------------------- */
 
