--- a/app/scripts/templates/FilterButtonComposite.ejs
+++ b/app/scripts/templates/FilterButtonComposite.ejs
@@ -1,5 +1,5 @@
-<div class="btn-group dropup">
-	<button type="button" class="btn btn-default btn-lg dropdown-toggle" data-toggle="dropdown">
+<div class="btn-group">
+	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 		<%= label %>
 		<span class="caret"></span>
 	</button>
