Enabled filtering of parts

--- a/app/scripts/templates/PartItem.ejs
+++ b/app/scripts/templates/PartItem.ejs
@@ -1,5 +1,5 @@
 <a href="<%= url %>" target="_blank">
-	<div class="part-image-container-sm"><img class="part-image-sm" src="<%= image %>" /></div>
+	<div class="part-image-container"><img class="part-image" src="<%= image %>" /></div>
 </a>
 <a href="<%= url %>" target="_blank">
 	<h5 class="part-title" id="part-title"><%= title %></h5>
