Added new component button

--- a/app/scripts/templates/PartComposite.ejs
+++ b/app/scripts/templates/PartComposite.ejs
@@ -1,4 +1,4 @@
-<div id="parts-container" class="container">
+<div id="parts-container">
 	<div id="no-results-container" class="alert alert-warning" role="alert">
 		There are no matching components for that combination of filters. <a id="show-all-button" class="alert-link" href='#'>Show all components.</a>
 	</div>
