--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -315,6 +315,10 @@ h6 {
 /* PARTS LAYOUT
 -------------------------------------------------- */
 
+#operations-container {
+  margin-top: 20px;
+}
+
 #parts-list-container {
   margin-top: 20px;
 }
