--- a/app/scripts/templates/PartFiltersLayout.ejs
+++ b/app/scripts/templates/PartFiltersLayout.ejs
@@ -1,2 +1,3 @@
-<div id='filters-container' class='container'></div>
-<div id='parts-list-container' class='container'></div>
+<div id='filters-container'></div>
+<div id='operations-container'></div>
+<div id='parts-list-container'></div>
