--- a/app/scripts/templates/BikeDetailLayout.ejs
+++ b/app/scripts/templates/BikeDetailLayout.ejs
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <div id="header-container"></div>
       </div>
-      <div class="modal-body">
+      <div class="modal-body modal-body-no-padding">
         <div id="detail-hotspots-container"></div>
         <div id="bike-container"></div>
         <div id="parts-container"></div>
