Enabled removing parts

--- a/app/scripts/templates/AddPartLayout.ejs
+++ b/app/scripts/templates/AddPartLayout.ejs
@@ -1,5 +1,5 @@
 <div class="modal fade" id="add-part-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-sm">
+  <div class="modal-dialog modal-md">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -10,7 +10,7 @@
       <div class="modal-body">
         <form role="form" class="edit-form" id="part-add-form">
           <div class="form-group">
-            <input type="text" class="form-control input-sm" id="input-image" placeholder="ASIN">
+            <input type="text" class="form-control input-sm" id="input-id" placeholder="ASIN">
           </div>
           <div class="form-group">
             <input type="text" class="form-control input-sm" id="input-image" placeholder="Image">
@@ -19,7 +19,7 @@
             <input type="text" class="form-control input-sm" id="input-title" placeholder="Title">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control input-sm" id="input-title" placeholder="URL">
+            <input type="text" class="form-control input-sm" id="input-url" placeholder="URL">
           </div>
           <button type="button" class="btn btn-primary btn-xs" id="part-add-save-button"><span class='glyphicon glyphicon glyphicon-cloud-upload'></span> Save</button> 
         </form>
