--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -77,6 +77,17 @@ h6 {
   border: none;
 }
 
+/* ADD NEW PART MODAL
+-------------------------------------------------- */
+
+#operations-container {
+  display: none;
+}
+
+.modal-md {
+  max-width: 600px;
+}
+
 /* PART BUTTON
 -------------------------------------------------- */
 
