--- a/app/scripts/templates/BikeDetailLayout.ejs
+++ b/app/scripts/templates/BikeDetailLayout.ejs
@@ -4,6 +4,7 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <div id="header-container"></div>
+        <div id="operations-container"></div>
       </div>
       <div class="modal-body modal-body-no-padding">
         <div id="detail-hotspots-container"></div>
