--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,12 @@
+/* BOOTSTRAP
+-------------------------------------------------- */
+
 $icon-font-path: '../bower_components/sass-bootstrap/fonts/';
 
 @import 'sass-bootstrap/lib/bootstrap';
+
+/* GLOBAL
+-------------------------------------------------- */
 
 html, body {
   height: 100%;
@@ -25,6 +31,12 @@ h4,
 h5,
 h6 {
   font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.inner-shadow {
+   -moz-box-shadow: inset 0 0 10px rgba(0,0,0,0.5);
+   -webkit-box-shadow: inset 0 0 rgba(0,0,0,0.5);
+   box-shadow: inset 0 0 10px rgba(0,0,0,0.5);
 }
 
 .browsehappy {
@@ -100,6 +112,49 @@ h6 {
   border-bottom: 1px solid #e5e5e5;
   box-shadow: 0;
   transition: box-shadow 0.4s;
+
+  .part-image-container {
+    height: 150px;
+    text-align: center;
+    
+    .part-image {
+      max-width: 150px;
+      max-height: 150px;
+    }
+  }
+
+  .part-title {
+    padding-top: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+}
+
+.part-container-sm {
+  position: relative;
+  height: 51px;
+  padding: 0;
+  text-align: left;
+
+  .part-image-container {
+    float: left;
+    width: 50px;
+    height: 50px;
+    margin-left: 20px;
+    text-align: left;
+
+    .part-image {
+      max-width: 50px;
+      max-height: 50px;
+    }
+  }
+
+  .part-title {
+    float: left;
+    padding-top: 8px;
+    margin-left: 20px;
+    margin-right: 0;
+  }
 }
 
 .part-container:hover {
@@ -108,22 +163,6 @@ h6 {
   -webkit-box-shadow: 0 2px 10px rgba(0,0,0,0.15);
 
   z-index: 100;
-}
-
-.part-image-container {
-  height: 150px;
-  text-align: center;
-}
-
-.part-image {
-  max-width: 150px;
-  max-height: 150px;
-}
-
-.part-title {
-  padding-top: 20px;
-  margin-left: 50px;
-  margin-right: 50px;
 }
 
 /* EDIT FORMS
@@ -175,6 +214,13 @@ h6 {
 #detail-hotspots-container {
   display: none;
   position: absolute;
+}
+
+#add-parts-container {
+  display: none;
+  height: 203px;
+  overflow-y: scroll;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .bike-image {
