Adding part art item on Add click

--- a/app/scripts/templates/PartItem.ejs
+++ b/app/scripts/templates/PartItem.ejs
@@ -6,6 +6,7 @@
 </a>
 <button type="button" class="btn btn-default btn-xs edit-button absolute-edit-button" id="part-edit-button"><span class='glyphicon glyphicon glyphicon-pencil'></span> Edit</button>
 <button type="button" class="btn btn-default btn-xs edit-button absolute-edit-button" id="part-edit-cancel-button"><span class='glyphicon glyphicon glyphicon-remove'></span> Cancel</button>
+<button type="button" class="btn btn-default btn-xs edit-button absolute-right-button" id="part-add-button"><span class='glyphicon glyphicon glyphicon-plus'></span> Add</button>
 <form role="form" class="edit-form" id="part-edit-form">
   <div class="form-group">
     <input type="text" class="form-control input-sm" id="input-image" placeholder="<%= image %>" value="<%= image %>">
