Made Updated responsive CSS for mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -247,8 +247,9 @@ h6 {
 #hero-container {
   height: 100%;
   margin: 0 auto;
+  max-height: 250px;
 
-  @media (max-width: 768px) {
+  @media (min-width: 500px) and (max-width: 768px) {
     max-height: 400px;
   }
   @media (min-width: 768px) and (max-width: 1200px) {
@@ -305,6 +306,22 @@ h6 {
 
 .carousel-caption {
   padding-bottom: 0;
+
+  h1 {
+    display: none;
+
+    @media (min-width: 768px) {
+      display: block;
+    }
+  }
+
+  #hotspots-button {
+    display: none;
+
+    @media (min-width: 768px) {
+      display: inline;
+    }
+  }
 }
 
 /* HOTSPOTS
