--- a/app/scripts/templates/AddPartLayout.ejs
+++ b/app/scripts/templates/AddPartLayout.ejs
@@ -21,7 +21,8 @@
           <div class="form-group">
             <input type="text" class="form-control input-sm" id="input-url" placeholder="URL">
           </div>
-          <button type="button" class="btn btn-primary btn-xs" id="part-add-save-button"><span class='glyphicon glyphicon glyphicon-cloud-upload'></span> Save</button> 
+          <button type="button" class="btn btn-primary btn-xs edit-button" id="part-add-save-button"><span class='glyphicon glyphicon-floppy-saved'></span> Save</button>
+          <button type="button" class="btn btn-default btn-xs edit-button" id="part-add-cancel-button"><span class='glyphicon glyphicon glyphicon-ban-circle'></span> Cancel</button>
         </form>
       </div>
       <div class="modal-footer"></div>
