--- a/app/scripts/templates/BikeDetailLayout.ejs
+++ b/app/scripts/templates/BikeDetailLayout.ejs
@@ -7,6 +7,7 @@
         <div id="operations-container"></div>
       </div>
       <div class="modal-body modal-body-no-padding">
+        <div id="edit-details-container"></div>
         <div id="add-parts-container"></div>
         <div id="detail-hotspots-container"></div>
         <div id="bike-container"></div>
