--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,10 +33,16 @@ h6 {
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
+.outer-shadow {
+  box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+}
+
 .inner-shadow {
-   -moz-box-shadow: inset 0 0 10px rgba(0,0,0,0.5);
-   -webkit-box-shadow: inset 0 0 rgba(0,0,0,0.5);
-   box-shadow: inset 0 0 10px rgba(0,0,0,0.5);
+  -moz-box-shadow: inset 0 0 10px rgba(0,0,0,0.5);
+  -webkit-box-shadow: inset 0 0 rgba(0,0,0,0.5);
+  box-shadow: inset 0 0 10px rgba(0,0,0,0.5);
 }
 
 .browsehappy {
@@ -114,12 +120,21 @@ h6 {
   transition: box-shadow 0.4s;
 
   .part-image-container {
-    height: 150px;
+    height: 100px;
     text-align: center;
+
+    @media (min-width: 768px) {
+      height: 150px;
+    }
     
     .part-image {
-      max-width: 150px;
-      max-height: 150px;
+      max-width: 100px;
+      max-height: 100px;
+
+      @media (min-width: 768px) {
+        max-width: 150px;
+        max-height: 150px;
+      }
     }
   }
 
@@ -170,18 +185,9 @@ h6 {
 
 #bike-edit-form {
   padding-top: 5px;
-  display: none;
 }
 
 #bike-edit-button {
-  display: none;
-}
-
-#bike-edit-delete-button {
-  display: none;
-}
-
-#bike-edit-cancel-button {
   display: none;
 }
 
@@ -206,6 +212,10 @@ h6 {
   margin-bottom: 5px;
 }
 
+.edit-button {
+  margin-top: 10px;
+}
+
 .absolute-edit-button {
   position: absolute;
   top: 10px;
@@ -226,9 +236,15 @@ h6 {
   position: absolute;
 }
 
+#edit-details-container {
+  display: none;
+  padding: 15px;
+  border-bottom: 1px solid #e5e5e5;
+}
+
 #add-parts-container {
   display: none;
-  height: 203px;
+  height: 407px;
   overflow-y: scroll;
   border-bottom: 1px solid #e5e5e5;
 }
@@ -400,7 +416,7 @@ h6 {
 -------------------------------------------------- */
 
 #operations-container {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 #parts-list-container {
