Created add hotspots layout

--- a/app/scripts/templates/BikeDetailLayout.ejs
+++ b/app/scripts/templates/BikeDetailLayout.ejs
@@ -9,6 +9,7 @@
       <div class="modal-body modal-body-no-padding">
         <div id="edit-details-container"></div>
         <div id="add-parts-container"></div>
+        <div id="add-hotspots-container"></div>
         <div id="detail-hotspots-container"></div>
         <div id="bike-container"></div>
         <div id="parts-container"></div>
