--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -249,6 +249,11 @@ h6 {
   border-bottom: 1px solid #e5e5e5;
 }
 
+#add-hotspots-container {
+  display: none;
+  border-bottom: 1px solid #e5e5e5;
+}
+
 .bike-image {
   width: 100%;
 
