Moved edit title and image fields out of header; created add hotspot screen

--- a/app/scripts/templates/BikeEditLayout.ejs
+++ b/app/scripts/templates/BikeEditLayout.ejs
@@ -1,14 +1,17 @@
-<div class="modal fade" id="bike-detail-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="bike-edit-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <div id="header-container"></div>
+        <div id="operations-container"></div>
       </div>
       <div class="modal-body modal-body-no-padding">
-        <div id="add-hotspots-container"></div>
         <div id="detail-hotspots-container"></div>
         <div id="bike-container"></div>
+        <div id="edit-details-container"></div>
+        <div id="add-parts-container"></div>
+        <div id="add-hotspots-container"></div>
         <div id="parts-container"></div>
       </div>
       <div class="modal-footer"></div>
