--- a/app/scripts/templates/CarouselItem.ejs
+++ b/app/scripts/templates/CarouselItem.ejs
@@ -4,5 +4,6 @@
         <h1><%= title %></h1>
         <button type="button" class="btn btn-default btn-xs" id="parts-button">Equipment Grouping</button>
         <button type="button" class="btn btn-default btn-xs" id="hotspots-button">Toggle Hotspots</button>
+        <button type="button" class="btn btn-primary btn-xs" id="edit-bike-button">Edit</button>
     </div>
 </div>
