Added functionality to select bike tags when adding a new bike

--- a/app/scripts/templates/AddBikeLayout.ejs
+++ b/app/scripts/templates/AddBikeLayout.ejs
@@ -15,6 +15,7 @@
           <div class="form-group">
             <input type="text" class="form-control input-sm" id="input-image" placeholder="Image">
           </div>
+          <div id='filters-container'></div>
           <button type="button" class="btn btn-primary btn-xs edit-button" id="bike-add-save-button"><span class='glyphicon glyphicon-floppy-saved'></span> Save</button>
           <button type="button" class="btn btn-default btn-xs edit-button" id="bike-add-cancel-button"><span class='glyphicon glyphicon glyphicon-ban-circle'></span> Cancel</button>
         </form>
